파인튜닝 품질 개선 및 RAG 기능 향상
- RAG 프롬프트 형식 일치 (messages 기반)
- LLM 기반 답변 생성 (30% 확률)
- 피드백 데이터 선별 활용
- 학습 파라미터 최적화 (learning_rate, epochs, warmup, weight_decay)
- LoRA 파라미터 조정 (rank 32, 더 많은 레이어)
- 쿼리 캐싱, 신뢰도 점수, 관련 질문 제안 기능 추가
- .gitignore 업데이트 (로그, 백업 파일 제외)

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,15 @@ huggingface/
 *.safetensors
 *.bin
 
+# 로그 파일
+logs/
+*.log
+
 # 에디터/OS 관련
 .DS_Store
 .idea/
 .vscode/
+
+# 백업 파일
+*.backup
+*.backup2
